tests/ui/track-diagnostics/track6.stderr
error[E0658]: specialization is unstable
  --> $DIR/track6.rs:LL:CC
   |
LL |     default fn bar() {}
   |     ^^^^^^^^^^^^^^^^^^^
-Ztrack-diagnostics: created at compiler/rustc_ast_passes/src/feature_gate.rs:LL:CC
   |
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: add `#![feature(specialization)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
